--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "bip39": "^2.5.0",
     "compose-funcs": "^1.0.0",
-    "ethers": "^3.0.24"
+    "ethers": "^3.0.24",
+    "web3": "^1.0.0-beta.34"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0-beta.47",
@@ -45,7 +46,9 @@
         }
       ]
     ],
-    "plugins": ["@babel/plugin-proposal-class-properties"]
+    "plugins": [
+      "@babel/plugin-proposal-class-properties"
+    ]
   },
   "lint-staged": {
     "*.js": [
