--- a/.ethrc
+++ b/.ethrc
@@ -1,3 +1,3 @@
 export NODE_PATH=src
-export ETH_NETWORK=ropsten
-export INFURA_TOKEN=ur47Lz3XILJxaexyGLCi
+export ETH_NODE_SERVER=https://ropsten.infura.io/ur47Lz3XILJxaexyGLCi
+export WATCH_INTERVAL=60000
