--- a/package.json
+++ b/package.json
@@ -17,9 +17,8 @@
   "dependencies": {
     "bip39": "^2.5.0",
     "compose-funcs": "^1.0.0",
-    "eth-block-tracker": "^4.0.1",
     "ethers": "^3.0.24",
-    "ethjs-provider-http": "^0.1.6",
+    "moment": "^2.22.2",
     "redux": "^4.0.0",
     "web3": "^1.0.0-beta.34"
   },
