--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "bip39": "^2.5.0",
     "compose-funcs": "^1.0.0",
+    "ethereumjs-tx": "^1.3.5",
     "ethers": "^3.0.24",
     "moment": "^2.22.2",
     "redux": "^4.0.0",
