--- a/.ethrc
+++ b/.ethrc
@@ -1,3 +1,5 @@
 export NODE_PATH=src
 export ETH_NODE_SERVER=https://ropsten.infura.io/ur47Lz3XILJxaexyGLCi
 export WATCH_INTERVAL=60000
+export MNEMONIC="roast recipe soon hat couch mercy inspire dynamic pottery smooth bubble arrest"
+export RECEIVE_ACCOUNT=0x81148ea6b5DC73e6afb13FbCC7DA9B578b0A6B84
