--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "engines": {
     "node": ">= 8.11.x"
   },
+  "bin": {
+    "ETHUtils": "dist/commands/index.js"
+  },
   "scripts": {
-    "setup": "echo 'Please run: source .ethrc'",
-    "start": "npm run build && pm2 start pm2-depositor.json",
+    "prepare": "echo 'Please run: source .ethrc'",
+    "start": "yarn build && pm2 start pm2-config.json",
     "dev": "node -r @babel/register src/daemon.js",
+    "build": "babel src --out-dir=dist",
+    "collect": "yarn call src/commands/index.js collect",
     "format": "lint-staged",
     "call": "node -r @babel/register",
-    "build": "babel src --out-dir=dist",
-    "pm2": "npm run build && pm2 start pm2-depositor.json",
     "test": "jest"
   },
   "dependencies": {
