--- a/package.json
+++ b/package.json
@@ -116,7 +116,8 @@
     "testPathIgnorePatterns": [
       "test-cases.js$",
       "__tests__/manual/.*.js$",
-      "__tests__/.*.mock.js$"
+      "__tests__/.*.mock.js$",
+      "(/)?dist/.*.js$"
     ]
   }
 }
