--- a/.travis.yml
+++ b/.travis.yml
@@ -5,15 +5,10 @@ cache: yarn
 before_script:
   - node --version
   - yarn --version
+  - source .ethrc
+  - printenv NODE_PATH
 script:
   - yarn test --ci
   - yarn test --coverage
-env:
-  - NODE_ENV=dev
-  - NODE_PATH=src
-  - ETH_NODE_SERVER=https://ropsten.infura.io/ur47Lz3XILJxaexyGLCi
-  - WATCH_INTERVAL=1000
-  - RECEIVE_ACCOUNT=0x81148ea6b5DC73e6afb13FbCC7DA9B578b0A6B84
-  - DB_FILE_PATH="/c/work-station/eth-wallet-utils/src/commands/__tests__/db.mock.js"
 notifications:
   email: false
