--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "babel-7-jest": "^21.3.3",
     "babel-core": "^7.0.0-0-beta.47",
     "babel-eslint": "^8.2.5",
+    "babel-plugin-module-resolver": "^3.1.1",
     "eslint": "^4.18.2",
     "husky": "^0.13.4",
     "jest": "^23.1.0",
@@ -61,7 +62,15 @@
       ]
     ],
     "plugins": [
-      "@babel/plugin-proposal-class-properties"
+      "@babel/plugin-proposal-class-properties",
+      [
+        "module-resolver",
+        {
+          "root": [
+            "./src"
+          ]
+        }
+      ]
     ]
   },
   "lint-staged": {
