--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "collect": "yarn call src/commands/index.js collect",
     "format": "lint-staged",
     "call": "node -r @babel/register",
-    "test": "jest"
+    "test": "jest",
+    "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls"
   },
   "dependencies": {
     "bip39": "^2.5.0",
@@ -44,6 +45,7 @@
     "babel-core": "^7.0.0-0-beta.47",
     "babel-eslint": "^8.2.5",
     "babel-plugin-module-resolver": "^3.1.1",
+    "coveralls": "^3.0.2",
     "eslint": "^4.18.2",
     "husky": "^0.13.4",
     "jest": "^23.1.0",
