--- a/package.json
+++ b/package.json
@@ -18,17 +18,18 @@
     "start": "yarn build && pm2 start pm2-config.json",
     "dev": "node -r @babel/register src/daemon.js",
     "build": "babel src --out-dir=dist",
-    "collect": "yarn call src/commands/index.js collect",
+    "collect": "cross-env NODE_PATH=src yarn call src/commands/index.js collect",
     "format": "lint-staged",
     "call": "node -r @babel/register",
-    "test": "jest",
-    "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls"
+    "test": "cross-env NODE_PATH=src jest",
+    "coveralls": "cat ./coverage/lcov.info | coveralls"
   },
   "dependencies": {
     "bip39": "^2.5.0",
     "chalk": "^2.4.1",
     "commander": "^2.16.0",
     "compose-funcs": "^1.0.0",
+    "cross-env": "^5.2.0",
     "ethereumjs-tx": "^1.3.5",
     "ethers": "^3.0.24",
     "moment": "^2.22.2",
