--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
+branches:
+  only:
+  - master
 language: node_js
 node_js:
   - "8.11.3"
@@ -5,7 +8,5 @@ cache: yarn
 before_script:
   - source .ethrc
 script:
-  - yarn test --ci --detectOpenHandles --silent --coverage --coverageReporters=text-lcov
-notifications:
-  email: false
-  after_success: 'yarn coveralls'
+  - yarn test --ci --detectOpenHandles --silent --coverage
+after_script: yarn coveralls
